--- a/Clients/templates/Clients/Clients.html
+++ b/Clients/templates/Clients/Clients.html
@@ -18,50 +18,24 @@
                 </div>
             </div>
         </li>
-
     </ul>
 </section>
 <section class="probootstrap-section probootstrap-bg-white">
     <div class="container">
+        {% for clientCategory in clientCategory.all %}
         <div class="row probootstrap-animate">
             <div class="col-md-12 client-background">
                 <div class="client-list">
-                    <h3> 01. Client</h3>
-                    <ul>
-                        <li>client name</li>
+                    <h3> {{ clientCategory.category }}</h3>
+                    {% for Client in clientCategory.Clients.all%}
+                    <ul style = "margin-bottom: 10px">
+                        <li>{{ Client.client }}</li>
                     </ul>
-                    <ul>
-                        <li>client name</li>
-                    </ul>
-                    <ul>
-                        <li>client name</li>
-                    </ul>
-                    <ul>
-                        <li>client name</li>
-                    </ul>
+                    {% endfor %}
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12 client-background probootstrap-animate">
-                <div class="client-list">
-                    <h3> 02. Client</h3>
-                    <ul>
-                        <li>client name</li>
-                    </ul>
-                    <ul>
-                        <li>client name</li>
-                    </ul>
-                    <ul>
-                        <li>client name</li>
-                    </ul>
-                    <ul>
-                        <li>client name</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
+        {% endfor %}
     </div>
 </section>
 {% endblock %}
